# wm

./: Cargo.toml
src/: component.rs  custom_event.rs  global.rs  lib.rs  main.rs  render_context.rs
src/component/: desktop.rs  utils.rs
src/component/desktop/: window.rs  window_manager.rs
src/component/desktop/application/: sample.rs
src/component/utils/: button.rs  cursor.rs  input.rs  plane.rs  text.rs
src/component/utils/button/: button.frag  button.vert
src/component/utils/cursor/: cursor.frag  cursor.vert
src/component/utils/plane/: plane.frag  plane.vert
src/component/utils/text/: raw_text.rs  text.frag  text.vert
wm-app/: Cargo.toml
wm-app/src/: main.rs
wm-lib/: Cargo.toml
wm-lib/src/: global.rs  lib.rs  rw_cell.rs
wm-lib/src/component/desktop/: application.rs  window.rs  window_manager.rs
wm-lib/src/component/desktop/application/: sample.rs
wm-lib/src/component/utils/: button.rs  cursor.rs  input.rs  plane.rs  text.rs
wm-lib/src/component/utils/text/: raw_text.rs  text.frag
