[package]
name = "wm"
version = "0.1.0"
authors = ["g2xpf <nameko.jack@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.29"
nalgebra = "*"
unicode-normalization = "0.1"
rusttype = { version = "0.9", features = ["gpu_cache"] }
